2005-01-24  Ben Maurer  <bmaurer@ximian.com>

	* mono.patch: Don't need this any more. Just use HEAD.

2005-01-23  Ben Maurer  <bmaurer@ximian.com>

	* mono.patch: update

2005-01-21  Ben Maurer  <bmaurer@ximian.com>

	* mono.patch: update.
	
	* configure.in: Add stuff in AC_OUTPUT.

2005-01-16  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Add some checks for mime type crap

	* Makefile.am (SUBDIRS): Add mime-data

2005-01-15  Ben Maurer  <bmaurer@ximian.com>

	* mono.patch: update the patch for looking at the gc heap size.

2005-01-11  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Check for gtk-dotnet-2.0

2005-01-09  Ben Maurer  <bmaurer@ximian.com>

	* *: Initial Import.
