@@ -1,3 +1,3 @@
-SUBDIRS= viewer runtime-profiler
+SUBDIRS= viewer runtime-profiler desc-heap
 # disabled until I get something that really works
 # memstat
