@@ -1,0 +1,7 @@
+lib_LTLIBRARIES = libmono-profiler-desc-heap.la
+
+libmono_profiler_desc_heap_la_SOURCES = desc-heap.c
+
+libmono_profiler_desc_heap_la_LIBADD = @CCOMPILE_LIBS@
+
+INCLUDES = @CCOMPILE_CFLAGS@ -Wall
