@@ -1,3 +1,7 @@
+2005-03-10  Ben Maurer  <bmaurer@ximian.com>
+
+	* configure.in: New hackish heap dumping profiler.
+
 2005-01-24  Ben Maurer  <bmaurer@ximian.com>
 
 	* mono.patch: Don't need this any more. Just use HEAD.
